--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,7 +34,7 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
-    container: ubuntu
+    # container: ubuntu
     needs: publish-test-server
 
     permissions:
@@ -71,7 +71,7 @@ jobs:
       #   env:
       #     TEST_SERVER_HOST: test-server
 
-      - run: apt-get update && apt-get -y install curl && curl -v http://test-server:3000/manifest.json
+      # - run: apt-get update && apt-get -y install curl && curl -v http://test-server:3000/manifest.json
 
       # PHP
       - run: docker-compose -f ./clients/php/docker-compose.ci.yml up  --exit-code-from php-custom
