--- a/clients/php/docker-compose.ci.yml
+++ b/clients/php/docker-compose.ci.yml
@@ -9,7 +9,7 @@ services:
     # extra_hosts:
     #   - test-server:test-server
     command: composer test
-    # network_mode: host
+    network_mode: bridge
     tty: true
     volumes:
       - ./:/var/www/html
