fix: try a sleep for timing issues

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -93,7 +93,7 @@ jobs:
       #   env:
       #     TEST_SERVER_HOST: test-server
 
-      - run: curl -v http://test-server:3000/manifest.json
+      - run: sleep 10 && curl -v http://test-server:3000/manifest.json
 
       # PHP
       # - run: docker-compose -f ./clients/php/docker-compose.ci.yml up  --exit-code-from php-custom
