--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -72,6 +72,8 @@ jobs:
         image: ghcr.io/vexilla/test-server:latest
         ports:
           - 3000:3000
+        options: |
+          --health-cmd "curl -f http://localhost:3000/manifest.json"
 
     steps:
       - uses: actions/checkout@v3
@@ -93,9 +95,12 @@ jobs:
       #   env:
       #     TEST_SERVER_HOST: test-server
       # PHP
-      - run: docker-compose -f ./clients/php/docker-compose.ci.yml up  --exit-code-from php-custom
-        # env:
-        #   TEST_SERVER_HOST: test-server
+      # - run: docker-compose -f ./clients/php/docker-compose.ci.yml up  --exit-code-from php-custom
+      #   env:
+      #     TEST_SERVER_HOST: test-server
+      - run: |
+          docker build -t php-custom ./clients/php/.
+          docker run
       # - run: |
       #     cd ./clients/php
       #     composer install
