fix: try using docker directly instead of docker-compose

--- a/clients/php/Dockerfile
+++ b/clients/php/Dockerfile
@@ -15,6 +15,6 @@ RUN php composer-setup.php  --install-dir=/usr/local/bin --filename=composer
 RUN php -r "unlink('composer-setup.php');"
 # RUN composer install
 
-RUN curl -v http://localhost:3000/manifest.json
+# RUN curl -v http://localhost:3000/manifest.json
 
-# CMD bash
+CMD bash
