--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -97,7 +97,7 @@ jobs:
       #     TEST_SERVER_HOST: test-server
       - run: |
           docker build -t php-custom ./clients/php/.
-          docker exec php-custom "curl -f http://test-server:3000/manifest.json"
+          docker exec docker.io/library/php-custom "curl -f http://test-server:3000/manifest.json"
       # - run: |
       #     cd ./clients/php
       #     composer install
