--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,28 +32,6 @@ jobs:
           docker build . --tag ghcr.io/vexilla/test-server:latest
           docker push ghcr.io/vexilla/test-server:latest
 
-  # publish-host:
-  #   runs-on: ubuntu-latest
-
-  #   permissions:
-  #     contents: read
-  #     packages: write
-
-  #   steps:
-  #     - uses: actions/checkout@v3
-
-  #     - name: Login to GitHub Container Registry
-  #       uses: docker/login-action@v1
-  #       with:
-  #         registry: ghcr.io
-  #         username: vexilla
-  #         password: ${{secrets.GITHUB_TOKEN}}
-
-  #     - name: Build Host Image
-  #       run: |
-  #         docker build . --tag ghcr.io/vexilla/host:latest
-  #         docker push ghcr.io/vexilla/host:latest
-
   test-php:
     runs-on: ubuntu-latest
     container: php:7.4.33-fpm
@@ -113,19 +91,18 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      # Bazel-supported languages
-      # - name: Cache Bazel
-      #   uses: actions/cache@v3
-      #   with:
-      #     path: |
-      #       ~/.cache/bazel
-      #     key: ${{ runner.os }}-bazel-${{ hashFiles('.bazelversion', '.bazelrc', 'WORKSPACE', 'WORKSPACE.bazel', 'MODULE.bazel') }}
-      #     restore-keys: |
-      #       ${{ runner.os }}-bazel-
-      # - run: bazel build //...
-      # - run: bazel test //...
-      #   env:
-      #     TEST_SERVER_HOST: test-server
+      - name: Cache Bazel
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cache/bazel
+          key: ${{ runner.os }}-bazel-${{ hashFiles('.bazelversion', '.bazelrc', 'WORKSPACE', 'WORKSPACE.bazel', 'MODULE.bazel') }}
+          restore-keys: |
+            ${{ runner.os }}-bazel-
+      - run: bazel build //...
+      - run: bazel test //...
+        env:
+          TEST_SERVER_HOST: test-server
 
       # Elixir
       # - run: docker-compose -f ./clients/elixir/docker-compose.ci.yml up  --exit-code-from elixir-custom
