fix: add testing instruction to toml for docker container testing to be able to see the test-server on the host

--- a/clients/client-python/README.toml
+++ b/clients/client-python/README.toml
@@ -56,3 +56,9 @@ export class FeatureFlagsService {
 }
 ```
 '''
+TestingInstructions='''
+
+Inside of the docker container we need to allow the container to hit the test-server. This is only in local dev. The Github Action should be able to see it just fine. Maybe.
+
+TEST_SERVER_HOST=host.docker.internal:3000 pytest
+'''
