--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -92,12 +92,12 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - run: pip3 install pipenv
+
       - run: |
-          pip3 install pipenv
           cd ./clients/python
-          pipenv shell
           pipenv install
-          pytest
+          pipenv run pytest
         env:
           TEST_SERVER_HOST: test-server
 
