fix: update go sdk with latest scheduling fix

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -162,7 +162,8 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-bazel-
       - run: bazel build //...
-      - run: bazel test //...
+      - run: bazel coverage --combined_report=lcov //...
+        # - run: bazel test //...
         env:
           TEST_SERVER_HOST: test-server
 
