--- a/clients/php/composer.json
+++ b/clients/php/composer.json
@@ -11,7 +11,8 @@
   ],
   "require": {
     "ext-mbstring": "*",
-    "nesbot/carbon": "^2.71.0"
+    "nesbot/carbon": "^2.71.0",
+    "pcov/clobber": "^2.0"
   },
   "require-dev": {
     "php": "^7.4",
