--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -61,6 +61,9 @@ jobs:
         run: |
           apt-get update
           apt-get install git unzip -y
+          pecl install pcov
+          cp /usr/local/etc/php/php.ini-development /usr/local/etc/php/php.ini
+          echo "extension=pcov.so\n" >> /usr/local/etc/php/php.ini
           php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');"
           php -r "if (hash_file('sha384', 'composer-setup.php') === 'e21205b207c3ff031906575712edab6f13eb0b361f2085f1f1237b7126d785e826a450292b6cfd1d64d92e6563bbde02') { echo 'Installer verified'; } else { echo 'Installer corrupt'; unlink('composer-setup.php'); } echo PHP_EOL;"
           php composer-setup.php  --install-dir=/usr/local/bin --filename=composer
@@ -131,7 +134,9 @@ jobs:
       - run: |
           cd ./clients/elixir
           mix deps.get
-          mix test
+          mix local.hex --force
+          mix test --cover --export-coverage default
+          mix test.coverage
         env:
           TEST_SERVER_HOST: test-server:3000
 
@@ -162,7 +167,8 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-bazel-
       - run: bazel build //...
-      - run: bazel test //...
+      - run: bazel coverage --combined_report=lcov //...
+        # - run: bazel test //...
         env:
           TEST_SERVER_HOST: test-server
 
