chore: add kotlinc version check to debug things

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -166,6 +166,7 @@ jobs:
           key: ${{ runner.os }}-bazel-${{ hashFiles('.bazelversion', '.bazelrc', 'WORKSPACE', 'WORKSPACE.bazel', 'MODULE.bazel') }}
           restore-keys: |
             ${{ runner.os }}-bazel-
+      - run: kotlinc -version
       - run: bazel build //...
       - run: bazel coverage --combined_report=lcov //...
         # - run: bazel test //...
