--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -166,14 +166,41 @@ jobs:
           key: ${{ runner.os }}-bazel-${{ hashFiles('.bazelversion', '.bazelrc', 'WORKSPACE', 'WORKSPACE.bazel', 'MODULE.bazel') }}
           restore-keys: |
             ${{ runner.os }}-bazel-
-      - run: kotlinc -version
       - run: bazel build //...
       - run: bazel coverage --combined_report=lcov //...
         # - run: bazel test //...
         env:
           TEST_SERVER_HOST: test-server
 
-      # Elixir
-      # - run: docker-compose -f ./clients/elixir/docker-compose.ci.yml up  --exit-code-from elixir-custom
-      #   env:
-      #     TEST_SERVER_HOST: test-server
+  test-kotlin:
+    runs-on: ubuntu-latest
+    needs: ["publish-test-server"]
+
+    services:
+      test-server:
+        credentials:
+          username: vexilla
+          password: ${{secrets.GITHUB_TOKEN}}
+        image: ghcr.io/vexilla/test-server:latest
+        ports:
+          - 3000:3000
+        options: |
+          --health-cmd "curl -f http://localhost:3000/manifest.json"
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - uses: actions/setup-java@v3
+        with:
+          java-version: 8
+
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
+
+      - name: Execute Gradle build
+        run: ./gradlew build
+
+      - name: Execute Gradle test
+        run: ./gradlew test
+        env:
+          TEST_SERVER_HOST: test-server
