--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -192,6 +192,7 @@ jobs:
 
       - uses: actions/setup-java@v3
         with:
+          distribution: corretto
           java-version: 8
 
       - name: Setup Gradle
