fix: use proper path for gradlew command

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -199,9 +199,9 @@ jobs:
         uses: gradle/gradle-build-action@v2
 
       - name: Execute Gradle build
-        run: ./gradlew build
+        run: ./clients/kotlin/gradlew build
 
       - name: Execute Gradle test
-        run: ./gradlew test
+        run: ./clients/kotlin/gradlew test
         env:
           TEST_SERVER_HOST: test-server
