--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -6,28 +6,31 @@
     "dev": "pnpm astro dev",
     "start": "pnpm astro dev",
     "build": "astro build && pnpm pagefind && mkdir -p ./src/pagefind && cp -R ./dist/pagefind/* ./src/pagefind/",
-    "postinstall": "mkdir -p src/icons/phosphor && cp -R ./node_modules/@phosphor-icons/core/assets/* src/icons/phosphor/"
+    "postinstall": "mkdir -p src/icons/phosphor && cp -R ./node_modules/@phosphor-icons/core/assets/* src/icons/phosphor/",
+    "prebuild": "geller scan -g ./src/**/*.ts -g ./src/**/*.tsx -g ./src/**/*.astro"
   },
   "dependencies": {
-    "@astrojs/markdoc": "^0.4.4",
-    "@astrojs/react": "^3.0.2",
-    "@astrojs/tailwind": "^5.0.0",
+    "@astrojs/markdoc": "^0.8.1",
+    "@astrojs/react": "^3.0.8",
+    "@astrojs/tailwind": "^5.0.4",
     "@fontsource/atkinson-hyperlegible": "^4.5.11",
     "@fontsource/fira-code": "^5.0.8",
     "@fontsource/racing-sans-one": "^4.5.10",
+    "@hookform/resolvers": "^3.3.4",
     "@iconify/icons-ph": "^1.2.4",
     "@iconify/icons-solar": "^1.2.0",
     "@iconify/react": "^1.1.3",
     "@phosphor-icons/core": "^2.0.2",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@types/react": "^18.2.8",
     "@types/react-dom": "^18.2.3",
-    "astro": "^3.1.0",
-    "astro-icon": "^0.8.1",
+    "astro": "^4.0.7",
+    "astro-icon": "^0.8.2",
     "astro-toml": "^0.1.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -36,13 +39,19 @@
     "pagefind": "^1.0.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-hook-form": "^7.50.0",
     "shiki": "^0.14.3",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "^3.0.24",
-    "tailwindcss-animate": "^1.0.6"
+    "tailwindcss-animate": "^1.0.6",
+    "zod": "^3.22.3"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.9"
+    "@tailwindcss/typography": "^0.5.9",
+    "geller": "^0.1.4",
+    "prettier": "^3.2.4",
+    "prettier-plugin-astro": "^0.13.0",
+    "typescript": "^5.3.3"
   },
   "engines": {
     "node": ">=18"
