--- a/apps/git-auth/package.json
+++ b/apps/git-auth/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "git-auth",
 	"version": "0.0.1",
+	"packageManager": "pnpm@8.5.0",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
@@ -13,7 +14,6 @@
 	},
 	"devDependencies": {
 		"@fontsource/fira-mono": "^4.5.10",
-		"@neoconfetti/svelte": "^1.0.0",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.5.0",
 		"@types/cookie": "^0.5.1",
