--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -51,6 +51,7 @@
     "geller": "^0.1.4",
     "prettier": "^3.2.4",
     "prettier-plugin-astro": "^0.13.0",
+    "sharp": "^0.27.0",
     "typescript": "^5.3.3"
   },
   "engines": {
