--- a/apps/forms/package.json
+++ b/apps/forms/package.json
@@ -30,6 +30,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"deep-email-validator": "^0.1.21",
 		"nodemailer": "^6.9.9",
 		"zod": "^3.21.4"
 	}
