--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "dev": "pnpm astro dev",
     "start": "pnpm astro dev",
-    "build": "astro build && pnpm pagefind && mkdir -p ./src/pagefind && cp -R ./dist/pagefind/* ./src/pagefind/",
+    "build:astro": "astro build",
+    "build:pagefind": "pnpm pagefind && mkdir -p ./src/pagefind && cp -R ./dist/pagefind/* ./src/pagefind/",
+    "build": "pnpm build:astro && pnpm build:pagefind",
     "postinstall": "mkdir -p src/icons/phosphor && cp -R ./node_modules/@phosphor-icons/core/assets/* src/icons/phosphor/",
     "prebuild": "geller scan -g ./src/**/*.ts -g ./src/**/*.tsx -g ./src/**/*.astro"
   },
