feat: restructure go code to keep internals private from docs and document public APIs

--- a/clients/elixir/.vscode/extensions.json
+++ b/clients/elixir/.vscode/extensions.json
@@ -2,6 +2,7 @@
   "recommendations": [
     "pantajoe.vscode-elixir-credo",
     "elixir-tools.elixir-tools",
-    "JakeBecker.elixir-ls"
+    "JakeBecker.elixir-ls",
+    "tamasfe.even-better-toml"
   ]
 }
