fix: add json.go to bazel dependencies for go

--- a/clients/go/pkg/BUILD.bazel
+++ b/clients/go/pkg/BUILD.bazel
@@ -4,6 +4,7 @@ go_library(
     name = "pkg",
     srcs = [
         "./internal/hashing.go",
+        "./internal/json.go",
         "./internal/scheduling.go",
         "./internal/types.go",
         "./vexilla/client.go",
